// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing theme component should renders correctly 1`] = `
.c0 {
  width: 185px;
  height: 185px;
  background-color: #FFFFFF;
  border-radius: 16px;
  padding: 10px;
  cursor: pointer;
}

.c1 {
  width: 165px;
  height: 128px;
  background: linear-gradient(243.5deg,#3A3A60 1.01%,#19192F 94.5%);
  border-radius: 16px;
  margin-bottom: 10px;
}

.c2 {
  font-size: 18px;
  line-height: 27px;
  font-weight: normal;
  color: #4e4b66;
}

<div
  className="c0 theme-component"
  data-testid="theme"
  name="Dark theme"
>
  <div
    className="c1"
    name="Dark theme"
  />
  <span
    className="c2"
    name="Dark theme"
  >
    Dark theme
  </span>
</div>
`;

exports[`Testing theme component should renders correctly as selected 1`] = `
.c0 {
  width: 185px;
  height: 185px;
  background-color: #FFFFFF;
  border-radius: 16px;
  padding: 10px;
  cursor: pointer;
}

.c1 {
  width: 165px;
  height: 128px;
  background: linear-gradient(243.5deg,#3A3A60 1.01%,#19192F 94.5%);
  border-radius: 16px;
  margin-bottom: 10px;
}

.c2 {
  font-size: 18px;
  line-height: 27px;
  font-weight: 500;
  color: #14142b;
}

<div
  className="c0 theme-component"
  data-testid="theme"
  name="Dark theme"
>
  <div
    className="c1"
    name="Dark theme"
  />
  <span
    className="c2"
    name="Dark theme"
  >
    Dark theme
  </span>
</div>
`;
